# SiTrackingGenfit

./: CMakeLists.txt  Genfit_CMakeLists.cmake  makeFieldFile.C  makeGeometry.C  measurementFactoryExample.cc  minimalFittingExample.cc  siTracking.cc
source/: MyField.cc  MyField.h
