CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(SITRACKING)

FIND_PACKAGE(ROOT REQUIRED COMPONENTS Geom)
INCLUDE(${ROOT_USE_FILE})

SET(GENFIT_ROOT "$ENV{GENFIT}")
FIND_PATH(GENFIT_INCLUDE_DIR Track.h PATHS ${GENFIT_ROOT}/include NO_DEFAULT_PATH)
FIND_LIBRARY(GENFIT_LIB genfit2 PATHS ${GENFIT_ROOT}/lib NO_DEFAULT_PATH)
MESSAGE(STATUS "GENFIT_ROOT: ${GENFIT_ROOT}")
MESSAGE(STATUS "GENFIT_INCLUDE_DIR: ${GENFIT_INCLUDE_DIR}")
MESSAGE(STATUS "GENFIT_LIB: ${GENFIT_LIB}")

FOREACH(program
        minimalFittingExample
        measurementFactoryExample
        siTrackingConstField
    )
    MESSAGE(STATUS ${program})
    ADD_EXECUTABLE(${program} ${program}.cc)
    TARGET_INCLUDE_DIRECTORIES(${program} PRIVATE ${GENFIT_INCLUDE_DIR})
    TARGET_LINK_LIBRARIES(${program} ${ROOT_LIBRARIES} ${GENFIT_LIB} ROOT::Core ROOT::Physics ROOT::Eve)
ENDFOREACH(program)
